--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>IGCSE Geography Revision</title>
+<title>IGCSE Geography Vocabulary</title>
 
 <style>
 body {
   margin: 0;
-  font-family: "Segoe UI", Arial, sans-serif;
-  background: #f0f4f8;
+  font-family: Arial, sans-serif;
+  background: #eef2f7;
   color: #2c3e50;
 }
 
-/* NAV BAR */
+/* NAVBAR */
 .navbar {
-  background: linear-gradient(90deg, #1e3c72, #2a5298);
+  background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
   padding: 15px;
   display: flex;
   align-items: center;
@@ -26,11 +27,10 @@ body {
 }
 
 .navbar button {
-  background: #f1c40f;
+  background: #f39c12;
   border: none;
-  padding: 10px 18px;
+  padding: 10px 20px;
   margin-right: 15px;
-  font-size: 15px;
   font-weight: bold;
   border-radius: 6px;
   cursor: pointer;
@@ -38,95 +38,60 @@ body {
 }
 
 .navbar button:hover {
+  background: #e67e22;
   transform: scale(1.08);
-  background: #f39c12;
 }
 
-/* CONTENT SECTIONS */
+/* SECTIONS */
 .section {
   display: none;
   padding: 25px;
-  animation: fadeSlide 0.6s ease;
+  animation: slideFade 0.6s ease;
 }
 
 .section.active {
   display: block;
 }
 
-@keyframes fadeSlide {
-  from {opacity: 0; transform: translateY(25px);}
-  to {opacity: 1; transform: translateY(0);}
+@keyframes slideFade {
+  from { opacity: 0; transform: translateY(30px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 
 h2 {
-  color: #1e3c72;
-  border-bottom: 3px solid #f1c40f;
-  padding-bottom: 5px;
+  color: #203a43;
+  border-bottom: 4px solid #f39c12;
+  padding-bottom: 6px;
 }
 
 .box {
   background: white;
-  padding: 18px;
-  margin: 18px 0;
+  padding: 20px;
+  margin: 20px 0;
   border-radius: 8px;
-  box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.12);
 }
 
 .box h3 {
-  color: #2a5298;
+  color: #2c5364;
 }
 
-/* VOCAB LIST */
+/* VOCAB */
 .vocab p {
   margin: 6px 0;
-}
-
-/* PPQ */
-textarea {
-  width: 100%;
-  height: 90px;
-  margin-top: 10px;
-  padding: 8px;
-  border-radius: 6px;
-}
-
-.show-btn {
-  background: #27ae60;
-  color: white;
-  border: none;
-  padding: 8px 14px;
-  margin-top: 10px;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-.show-btn:hover {
-  background: #219150;
-}
-
-.answer {
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.6s ease;
-  background: #eafaf1;
-  border-left: 6px solid #27ae60;
-  margin-top: 10px;
-  padding: 0 10px;
-}
-
-.answer.show {
-  max-height: 300px;
-  padding: 10px;
+  line-height: 1.4;
 }
 </style>
 </head>
 
 <body>
 
+<!-- NAV -->
 <div class="navbar">
   <h1>Geography</h1>
   <button onclick="show('population')">Human Population</button>
   <button onclick="show('rivers')">Rivers</button>
+  <button onclick="show('vocab')">Vocabulary</button>
 </div>
 
 <!-- POPULATION -->
@@ -134,26 +99,20 @@ textarea {
 <h2>Human Population</h2>
 
 <div class="box">
-<h3>Population Growth & Structure</h3>
-<p>Population growth occurs when the <b>birth rate</b> is higher than the <b>death rate</b>, resulting in <b>natural increase</b>. If death rate exceeds birth rate, <b>natural decrease</b> occurs.</p>
-<p><b>Population pyramids</b> show age and sex structure and help identify dependency ratio and future population trends.</p>
+<h3>Population Change</h3>
+<p>Population change is influenced by birth rate, death rate and migration. When birth rate is higher than death rate, natural increase occurs, leading to population growth.</p>
+<p>Population structure can be analysed using population pyramids, which show age, sex, and dependency ratio.</p>
 </div>
 
 <div class="box">
 <h3>Migration & Urbanisation</h3>
-<p><b>Migration</b> is the movement of people to live in another place. <b>Rural–urban migration</b> occurs due to push factors (poverty, lack of jobs) and pull factors (employment, education).</p>
-<p><b>Urbanisation</b> increases city populations and can lead to the growth of <b>megacities</b>.</p>
+<p>Migration is driven by push and pull factors. Rural–urban migration increases urban populations and contributes to the growth of megacities.</p>
+<p>Rapid urbanisation can lead to problems such as housing shortages, traffic congestion and pressure on services.</p>
 </div>
 
-<div class="box vocab">
-<h3>Key Vocabulary – Population & Settlement</h3>
-<p><b>Birth Rate:</b> Number of live births per 1000 people per year.</p>
-<p><b>Death Rate:</b> Number of deaths per 1000 people per year.</p>
-<p><b>Population Density:</b> People per km².</p>
-<p><b>Dependency Ratio:</b> Dependents compared to working population.</p>
-<p><b>Settlement Hierarchy:</b> Ranking of settlements by size and services.</p>
-<p><b>CBD:</b> Commercial and business centre of a city.</p>
-<p><b>Land Use:</b> How land is used (residential, industrial, commercial).</p>
+<div class="box">
+<h3>Settlements</h3>
+<p>Settlements vary in size and function and can be ranked using the settlement hierarchy. Land use patterns change with distance from the CBD.</p>
 </div>
 </div>
 
@@ -162,60 +121,27 @@ textarea {
 <h2>Rivers</h2>
 
 <div class="box">
-<h3>Upper Course</h3>
-<p>Steep gradient, vertical erosion dominant, narrow V-shaped valleys, waterfalls formed by differential erosion.</p>
+<h3>River Courses</h3>
+<p>In the upper course, vertical erosion dominates due to steep gradients. In the middle course, lateral erosion forms meanders. In the lower course, deposition forms floodplains and deltas.</p>
 </div>
 
 <div class="box">
-<h3>Middle Course</h3>
-<p>Lateral erosion increases, river becomes wider and deeper, meanders form due to erosion on the outer bend and deposition on the inner bend.</p>
+<h3>River Processes</h3>
+<p>Erosion, transportation and deposition shape river channels. Hydraulic action and abrasion erode the river bed and banks.</p>
 </div>
 
 <div class="box">
-<h3>Lower Course</h3>
-<p>Deposition dominates, floodplains and levees form, river may form a delta when entering the sea.</p>
-</div>
-
-<div class="box">
-<h3>River Processes & Landforms</h3>
-<p><b>Erosion:</b> Hydraulic action and abrasion.</p>
-<p><b>Transportation:</b> Traction, saltation, suspension, solution.</p>
-<p><b>Deposition:</b> Occurs when river loses energy.</p>
-</div>
-
-<div class="box">
-<h3>Hydrographs</h3>
-<p>A hydrograph shows river discharge after rainfall. Key features include lag time, rising limb, peak discharge, and falling limb.</p>
-</div>
-
-<div class="box">
-<h3>Case Studies</h3>
-<p><b>Ganges River:</b> Flooding caused by monsoon rainfall, snowmelt, and flat floodplains.</p>
-<p><b>Boscastle Flood (2004):</b> Flash flooding caused by intense rainfall, steep valley sides, and saturated ground.</p>
-</div>
-
-<div class="box">
-<h3>IGCSE PPQ Practice</h3>
-<p><b>Question:</b> How does a delta form?</p>
-<textarea placeholder="Write your answer here..."></textarea>
-<button class="show-btn" onclick="toggle()">Show Answer</button>
-<div id="ans" class="answer">
-A delta forms when a river enters the sea, loses energy, and deposits sediment. Over time, layers of deposition build outwards to form a delta.
+<h3>Flooding</h3>
+<p>Flooding can occur due to prolonged rainfall, short lag time on hydrographs, saturated ground and human activities such as urbanisation.</p>
 </div>
 </div>
 
-</div>
+<!-- VOCABULARY -->
+<div id="vocab" class="section">
+<h2>IGCSE Geography Vocabulary</h2>
 
-<script>
-function show(id) {
-  document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-  document.getElementById(id).classList.add('active');
-}
+<div class="box vocab">
 
-function toggle() {
-  document.getElementById("ans").classList.toggle("show");
-}
-</script>
-
-</body>
-</html>
+<p><b>Birth Rate:</b> Number of live births per thousand people per year.</p>
+<p><b>Death Rate:</b> Number of deaths per thousand people per year.</p>
+<p><b>Natural Increase:</b> When birth rate is higher than death rate
